+ Added: /furnace admin give command