@@ -1,1 +1,12 @@
-+ Added: /furnace admin give command
++ Added: Options to force furnaces to be placed inside claims or islands
+integration:
+  # Supports Lands (https://www.spigotmc.org/resources/53313), SuperiorSkyblock2, IridiumSkyblock, BentoBox
+  lands:
+    # Should players be allowed to place upgradeable furnaces only in claimed regions?
+    # This disallows placing upgradeable furnaces in wilderness. If a claim is being removed, all furnaces inside it will be removed as well and will drop to the ground
+    # or be given to the owner of the furnace.
+    only-land: false
+    # Remove furnaces of players that get untrusted from a region?
+    # The furnaces will be removed and the furnace item will drop to the ground or be given to the player, if the furnace is in a loaded chunk.
+    # If the furnace isn't in a loaded chunk, it will simply drop to the ground, the next time the chunk loads.
+    untrust-remove: true
